--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
              <img src="Assets/wc-mini.png" alt="" class="action-img">
         </section>
 
-
-
-
         <section class="Productive-user-card">
             <div class="user-box">
                 <h3 class="user-title">Joined Thousands of Productive Users</h3>
@@ -139,11 +136,22 @@
         </div>
         </div>
      </div> 
-    </section>
+        </section>
 
+        <!-- section.newsletter>h1.newsletter-title+.from-section -->
+         <section class="newsletter">
+            <h1 class="newsletter-title">Let’s Get in Touch</h1>
+                <form newsletter-form action="">
+                    <p class="email">Email</p>
+                    <input class="cmn" type="form-text email" name="" id="" placeholder="Your Email">
+                    <p class="form-text name">Name</p>
+                    <input class="cmn" type="text" name="" id="" placeholder="Your Name">
+                    <p class="message">Message</p>
+                    <textarea class="form-text" name="" id="" cols="100" rows="4" placeholder="Message" ></textarea>
+                    <input class="btn-primary connect" type="submit" value="Get in Touch">
+                </form>
+         </section>
     </main>
-    <footer>
-        
-    </footer>
+    
 </body>
 </html>
