--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
-<link rel="stylesheet" href="ui.css">
-<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="ui.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -152,7 +146,23 @@
                 </form>
          </section>
     </main>
-    
+    <footer>
+        <!-- .footer-container>h1.logo+p.company-description+.link-container>ul>li.footer*4>a.follow-link -->
+         <div class="footer-container">
+            <h1 class="logo inter-text">LOGO</h1>
+            <p class="company-description">Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+            <div class="link-container">
+                <ul>
+                    <li class="footer"><a href="" class="follow-link">Home</a></li>
+                    <li class="footer"><a href="" class="follow-link">About</a></li>
+                    <li class="footer"><a href="" class="follow-link">How it Works</a></li>
+                    <li class="footer"><a href="" class="follow-link">Services</a></li>
+                </ul>
+            </div>
+         </div>
+         
+    </footer>
+
 
 </body>
 </html>
